WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306198
AX: Children-changed events are not issued when direct children of a canvas are added or removed, breaking accessibility/dynamically-ignored-canvas.html in ITM
https://bugs.webkit.org/show_bug.cgi?id=306198
Summary
AX: Children-changed events are not issued when direct children of a canvas a...
Tyler Wilcock
Reported
2026-01-24 20:04:50 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-24 20:04:55 PST
<
rdar://problem/168851684
>
Tyler Wilcock
Comment 2
2026-01-24 20:13:08 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57191
EWS
Comment 3
2026-02-20 09:06:52 PST
Committed
307920@main
(47c6fa59fffb): <
https://commits.webkit.org/307920@main
> Reviewed commits have been landed. Closing PR #57191 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug