AX: Children-changed events are not issued when direct children of a canvas are added or removed, breaking accessibility/dynamically-ignored-canvas.html in ITM https://bugs.webkit.org/show_bug.cgi?id=306198 rdar://168851684

Reviewed by Joshua Hoffman.

AXObjectCache::childrenChanged(Node&) exited early for anything that had a renderer under the assumption that we would
get notifications from the render tree for rendered things. But canvas descendants are not rendered, so that assumption
isn't true in that case. Allow RenderCanvas as an exception in this method, fixing the test in ITM.

* LayoutTests/accessibility-isolated-tree/TestExpectations:
* LayoutTests/accessibility/dynamically-ignored-canvas.html:
* Source/WebCore/accessibility/AXObjectCache.h:

Canonical link: https://commits.webkit.org/307920@main